// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground/> should render with background dark 1`] = `
.c0 {
  display: flex;
  align-items: center;
  min-height: 100vh;
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground/> should render with background light 1`] = `
.c0 {
  display: flex;
  align-items: center;
  min-height: 100vh;
  background: #FFFFFF;
  color: #0A1128;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;
